--- a/unit_4/css/stylesheet.css
+++ b/unit_4/css/stylesheet.css
@@ -8,7 +8,8 @@
 
 .topnav a {
 	font-family: 'Raleway', sans-serif;
-	font-weight: normal;
+	font-weight: bolder;
+	font-size: 18px;
 	text-decoration: none;
 	color: #ffffff;
 	margin-right: 10px;
@@ -24,9 +25,23 @@
 }
 
 .project_bg {
-	background-image: linear-gradient(to right, rgba(0,0,0,.55), rgba(0,0,0,0)), url("image/spiderverse_edited.jpg");
+	background-image: linear-gradient(to right, rgba(0,0,0,.55), rgba(0,0,0,0)), url("images/spiderverse_edited.jpg");
 	background-size: 1920px;
 	background-repeat: no-repeat;
+}
+
+.project_title {
+	font-family: 'Raleway', sans-serif;
+	font-weight: bolder;
+	font-size: 32px;
+	line-height: 1em;
+}
+
+.project_description {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 18px;
+	font-weight: lighter;
+	line-height: 1.25em;
 }
 
 .project {
@@ -39,6 +54,8 @@
 
 #cta {
 	background: white;
+	font-family: 'Raleway', sans-serif;
+	font-weight: bolder;
 	text-decoration: none;
 	color: #000000;
 	margin: 10px;
@@ -52,7 +69,7 @@
 	float: left;
 	width: 30%;
 	padding: 10px 10px;
-	height: 300px;
+	/*height: 300px;*/
 	margin-left: 1%;
 }
 
@@ -60,10 +77,31 @@
 	display: table;
 }
 
+.columns img {
+	width: 100%;
+}
+
+.feature_title {
+	font-family: 'Raleway', sans-serif;
+	font-weight: bolder;
+	font-size: 24px;
+	text-align: center;
+}
+
+.feature_description {
+	font-family: "Montserrat", sans-serif;
+	font-weight: lighter;
+	font-size: 15px;
+	line-height: 1.5em;
+	margin: 1.5em;
+	text-align: center;
+}
+
 .contact_links {
 	background: #231f20;
 	padding: 30px 31px;
 	text-align: center;
+	margin-top: 20px;
 }
 
 .contact_links img{
