--- a/unit_9/css/stylesheet.css
+++ b/unit_9/css/stylesheet.css
@@ -36,7 +36,8 @@ nav {
 	width: 100%;
 }
 
-.project_bg {
+
+.banner {
 	background-image:  url("images/spiderverse_edited.jpg");
 	background-size: 100%;
 	background-repeat: no-repeat;
@@ -49,7 +50,13 @@ nav {
 	padding: 2%;
 	max-width: 25%;
 	text-align: center;
-	height: inherit;
+	
+
+}
+
+.banner img {
+	visibility: hidden;
+	display: none;
 }
 
 .project_title {
@@ -136,7 +143,50 @@ footer img{
 }
 
 @media only screen and (max-width: 1032px){
+	.banner {
+	background-image:  none;
+	}
 
+	.project {
+		background-color: rgba(211,211,211,.5);
+		margin: 2%;
+		padding: 2%;
+		max-width: 92%;
+		text-align: center;
+
+	}
+
+	.banner img {
+		display: block;
+		visibility: visible;
+		width: 100%;
+	}
+
+	.project_title {
+		font-family: 'Raleway', sans-serif;
+		font-weight: bolder;
+		font-size: 1.75em;
+		line-height: 1em;
+	}
+
+	.project_description {
+		font-family: 'Montserrat', sans-serif;
+		font-size: 1.2em;
+		font-weight: lighter;
+		line-height: 1.25em;
+	}
+
+	#cta {
+		background: white;
+		font-family: 'Raleway', sans-serif;
+		font-weight: bolder;
+		text-decoration: none;
+		color: #000000;
+		margin: 10px;
+		padding: 15px;
+		display: inline-block;
+
+	}
 	
 }
 
@@ -145,7 +195,7 @@ footer img{
 	.columns {
 		float: none;
 		width: 80%;
-		margin: 10%;
+		margin: .5% 10%;
 	}
 
 	.feature_title {
